--- a/01-03-2023/E-Commerce/src/components/gallery/index.css
+++ b/01-03-2023/E-Commerce/src/components/gallery/index.css
@@ -1,5 +1,39 @@
-.gallery img{
-    height: 650px;
+.gallery{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 550px;
     width: 100%;
-    object-fit: cover;
+}
+
+.gallery img{
+
+    height: 550px;
+    width: 100%;
+    object-fit: contain;
+}
+
+.gallery button {
+    transform: translate(0, -200px);
+    color:rgba(1, 0, 0, 0.639);
+    scale: 3;
+    background: none;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.left{
+    position:absolute;
+    top:900px;
+    left:calc(40% - 10px);
+}
+
+.right{
+    position:absolute;
+    top:900px;
+    right:calc(40% - 10px);
 }
