--- a/01-03-2023/E-Commerce/src/main.css
+++ b/01-03-2023/E-Commerce/src/main.css
@@ -1,3 +1,8 @@
 .Main {
-    background-color: rgb(177, 112, 112);
+    background-color: rgb(223, 199, 199);
 }
+
+.dark-mode {
+    background-color: rgb(32, 32, 32);
+    color: rgb(225, 225, 225);
+  }
